--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
 
-      - run: | # TODO: Replace with your build steps
-          mkdir data
-          echo "<h1>Hello Yoru Pages!</h1>" > data/index.html
-
       - name: Upload static files as artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          path: data
+          path: .
 
   deploy:
     runs-on: ubuntu-latest
@@ -33,7 +29,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     permissions:
-      contents: write
+      contents: read
       id-token: write
       pages: write
 
